--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@hyperlane-xyz/app": "^0.5.0-beta0"
   }
 }
