--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@hyperlane-xyz/app": "^0.5.0-beta0"
+    "@hyperlane-xyz/app": "^0.5.0-beta0",
+    "dotenv": "^16.0.3"
   }
 }
