--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "alchemy-sdk": "^2.1.1",
+    "axios": "^1.1.2"
   }
 }
