--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@rainbow-me/rainbowkit": "^0.7.0",
+    "alchemy-sdk": "^2.1.1",
     "ethers": "^5.7.1",
     "framer-motion": "^7.5.1",
     "ipfs-http-client": "^58.0.1",
