--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "chain": "npx hardhat node",
     "compile": "npx hardhat compile",
-    "deploy": "npx hardhat run scripts/deploy.ts",
-    "verify": "npx hardhat verify",
+    "deploy": "npx hardhat run scripts/deploy.ts --network",
+    "verify": "npx hardhat verify --network",
     "test": "hardhat test"
   },
   "devDependencies": {
